feat: add TASK 08/10 for brainfuck.

--- a/.vscode/tasks.json
+++ b/.vscode/tasks.json
@@ -2,8 +2,8 @@
     "tasks": [
         {
             "type": "cppbuild",
-            "label": "C/C++: clang.exe build active file",
-            "command": "C:\\Program Files\\LLVM\\bin\\clang.exe",
+            "label": "C/C++: g++.exe build active file",
+            "command": "C:\\Program Files\\LLVM\\bin\\g++.exe",
             "args": [
                 "-fcolor-diagnostics",
                 "-fansi-escape-codes",
