--- a/.vscode/launch.json
+++ b/.vscode/launch.json
@@ -9,7 +9,12 @@
             "type": "go",
             "request": "launch",
             "mode": "auto",
-            "program": "${fileDirname}"
+            "program": "${fileDirname}",
+            "env": {
+                "GOROOT": "D:\\Software setup\\Go1.20",
+                "GOPATH": "E:\\Go"
+            },
+            "args": [],
         }
     ]
 }
